--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
