--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.6.2",
     "mysql2": "^3.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.3",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^20.12.12",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5"
   }
 }
